--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Xuebin He",
   "license": "ISC",
+  "engines": {
+    "node": "7.8.x"
+  },
   "dependencies": {
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
