--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "path": "^0.12.7",
     "sequelize": "^3.30.2",
     "useragent": "^2.1.13"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0",
+    "supertest": "^3.0.0"
   }
 }
