--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -35,7 +35,7 @@ jobs:
       image_resource:
         type: docker-image
         source: {repository: kaleo211/dew-web}
-      imputs:
+      inputs:
       - name: dew-web
       run:
         path: dew-web/ci/tasks/push.sh
